--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <footer th:fragment="footer" class="pt-4 my-md-5 pt-md-5 border-top">
-    <div class="row">
+    <div class="row col-8 offset-2">
         <div class="col-12 col-md">
             <img
                 class="mb-2"
