--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
     <body>
-        <div th:fragment="navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow navbar-light" style="background-color: #a8ffe5">
+        <div th:fragment="navbar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow navbar-light" style="background-color: #a8ffe5">
             <h5 class="my-0 mr-md-auto font-weight-normal" th:text="${@environment.getProperty('app.name')}"></h5>
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" sec:authorize="isAuthenticated()" href="@{/projects/create}"><span class="fas fa-plus"></span> New Project</a>
