--- a/src/main/resources/templates/fragments/cssjs.html
+++ b/src/main/resources/templates/fragments/cssjs.html
@@ -13,7 +13,13 @@
 
         <script>
             $(document).ready(function(){
+                // Enable tooltips
                 $('[data-toggle="tooltip"]').tooltip();   
+                // Enable modals
+                $('.modal').each(function() {
+                    $(this).on('shown.bs.modal', function () {
+                        $(this).trigger('focus')
+                })
             });
         </script>
         <style>
