--- a/src/main/resources/templates/projects/all.html
+++ b/src/main/resources/templates/projects/all.html
@@ -14,7 +14,7 @@
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody th:each="project : ${ownProjects}">
+                <tbody th:each="project, idx : ${ownProjects}">
                     <tr>
                         <td class="width: 20%">
                             <a th:href="@{/projects/{id}(id=${project.getId()})}" th:text="${project.getName()}"></a>
@@ -22,8 +22,32 @@
                         <td style="width: 60%" th:text="${#strings.abbreviate(project.getDescription(), 50)}"></td>
                         <td style="width: auto" th:text="${#dates.format(project.getCreated(), 'dd-MM-yyyy HH:mm')}"></td>
                         <td style="width: 10%">
-                            <button class="btn btn-danger"><span class="fas fa-times"></span></button>
-                            <button class="btn btn-warning mr-2"><span class="fas fa-pen"></span></button>
+                            <button class="btn btn-danger text-white" data-toggle="modal" th:data-target="'#delete-confirmation-' + ${idx.index}">
+                                <span class="fas fa-times"></span>
+                            </button>
+                            <div class="modal fade" th:id="'delete-confirmation-' + ${idx.index}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel" th:text="'Delete project &quot;' + ${project.getName()} + '&quot;'"></h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            You canot undo this action, once the project is deleted you will not be able to recover it, and all the data attached to it will be lost
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                            <a href="javascript:;" th:onclick="'document.getElementById(&quot;delete-project-form-' + ${idx.index} + '&quot;).submit()'" class="btn btn-danger">Delete</a>
+                                            <form th:id="'delete-project-form-' + ${idx.index}" th:action="@{/projects/{id}(id=${project.getId()})}" th:method="delete" th:hidden="true">
+                                                <input hidden type="submit" value="Sign Out"/>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a th:href="@{/projects/{id}/edit(id=${project.getId()})}" class="btn btn-warning mr-2"><span class="fas fa-pen"></span></a>
                         </td>
                     </tr>
                 </tbody>
